--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,44 @@
   padding: 0;
 }
 
+.block1,
+.block2 {
+  width: 25%;
+  height: 100vh;
+  background-color: black;
+}
+
 .container {
   display: flex;
 }
 
 section.left {
-  width: 35%;
+  width: 25%;
+}
+
+.description {
+  margin-top: 5rem;
+}
+
+.description > p:nth-child(3) {
+  margin-top: 1rem;
+  margin-bottom: 2.5rem;
 }
 
 form {
   width: 100%;
   padding: 20px;
-  box-shadow: 0px 10px 10px 0px rgba(128, 128, 128, 0.431);
+  box-shadow: 0px 1px 10px 0px rgba(128, 128, 128, 0.431);
+}
+
+legend {
+  margin-top: -5px;
+  margin-bottom: 10px;
+}
+
+.submit-form {
+  padding: 20px;
+  margin-top: 10px;
 }
 
 label,
@@ -31,7 +57,7 @@ fieldset > div {
 }
 
 button {
-  width: 20%;
+  width: 35%;
   padding: 8px;
 }
 
@@ -39,4 +65,10 @@ button {
 .section2,
 .section3 {
   display: flex;
+}
+
+.section1 > div:nth-child(2),
+.section2 > div:nth-child(2),
+.section3 > div:nth-child(2) {
+  margin-left: 3rem;
 }
