--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .block1,
 .block2 {
-  width: 25%;
+  width: 15%;
   height: 100vh;
   background-color: black;
 }
@@ -16,10 +17,61 @@
 }
 
 section.left {
-  width: 25%;
+  width: 45%;
+  background-image: url(halie-west-unsplash.jpeg);
+  background-size: cover;
+  background-position: 35%;
 }
 
-.description {
+div.logo {
+  margin-top: 140px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 75vh;
+}
+
+div.logo-background {
+  display: flex;
+  background-color: rgba(34, 33, 33, 0.558);
+  width: 100%;
+  height: 20%;
+  justify-content: center;
+}
+
+.img-and-name {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+
+div.logo-background > .img-and-name > img {
+  height: 70px;
+  width: 60px;
+}
+
+div.logo-background > div.img-and-name > p {
+  font-family: "Norse", sans-serif;
+  color: white;
+  font-size: 60px;
+  align-self: center;
+  margin-top: 12px;
+}
+
+footer.copyright {
+  color: white;
+  align-self: center;
+  font-size: 8px;
+}
+
+a {
+  color: white;
+  text-decoration: underline;
+}
+
+.logo-content > .description {
   margin-top: 5rem;
   width: 90%;
   font-weight: 800;
